Fix vertical alignment for *all* material icons, not just ones inside buttons.

--- a/appengine/switchpass/core/static/core/css/switchpass.css
+++ b/appengine/switchpass/core/static/core/css/switchpass.css
@@ -43,7 +43,7 @@
 
 /* Materialize CSS bug fixes */
 
-.btn i.material-icons{
+i.material-icons{
 	vertical-align: sub;
 }
 
